--- a/fitness.html
+++ b/fitness.html
@@ -224,29 +224,31 @@
         <section id="past-sports" class="container">
             <h2 class="text-center my-4">Past Sports</h2>
             <div class="activities-container">
-                <div class="activity-box" style="background-image: url('football.jpg');">
+                <div class="activity-box" style="background-image: url('football.jpeg');">
                     <p>Football</p>
-                    <img src="football.jpg" alt="Football" class="sr-only" loading="lazy">
+                    <img src="football.jpeg" alt="Football" class="sr-only" loading="lazy">
                 </div>
-                <div class="activity-box" style="background-image: url('handball.jpg');">
+                <div class="activity-box" style="background-image: url('handball.jpeg');">
                     <p>Handball</p>
-                    <img src="handball.jpg" alt="Handball" class="sr-only" loading="lazy">
+                    <img src="handball.jpeg" alt="Handball" class="sr-only" loading="lazy">
                 </div>
-                <div class="activity-box" style="background-image: url('tennis.jpg');">
+                <div class="activity-box" style="background-image: url('teniis.jpeg');">
                     <p>Tennis</p>
-                    <img src="tennis.jpg" alt="Tennis" class="sr-only" loading="lazy">
+                    <img src="teniis.jpeg" alt="Tennis" class="sr-only" loading="lazy">
                 </div>
-                <div class="activity-box" style="background-image: url('mma.jpg');">
+                <div class="activity-box" style="background-image: url('MMA.jpeg');">
                     <p>MMA</p>
-                    <img src="mma.jpg" alt="MMA" class="sr-only" loading="lazy">
+                    <img src="MMA.jpeg" alt="MMA" class="sr-only" loading="lazy">
                 </div>
             </div>
         </section>
         <section id="current-activities" class="container">
             <h2 class="text-center my-4">Current Activities</h2>
-            <div class="activity-box" style="background-image: url('gym.jpg');">
-                <p>Gym</p>
-                <img src="gym.jpg" alt="Gym" class="sr-only" loading="lazy">
+            <div class="activities-container">
+                <div class="activity-box" style="background-image: url('weights.jpeg');">
+                    <p>Gym</p>
+                    <img src="gym.jpg" alt="Gym" class="sr-only" loading="lazy">
+                </div>
             </div>
         </section>
         <section id="hobbies" class="container">
