--- a/fitness.html
+++ b/fitness.html
@@ -36,7 +36,7 @@
         }
 
         header {
-            background: url('fitness-header.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.5);
+            background: url('fitnesss.jpeg') center/cover no-repeat, rgba(0, 0, 0, 0.5);
             color: #fff;
             padding: 100px 20px;
             text-align: center;
@@ -254,21 +254,21 @@
         <section id="hobbies" class="container">
             <h2 class="text-center my-4">Hobbies & Interests</h2>
             <div class="activities-container">
-                <div class="activity-box" style="background-image: url('skiing.jpg');">
+                <div class="activity-box" style="background-image: url('ski.jpeg');">
                     <p>Skiing</p>
-                    <img src="skiing.jpg" alt="Skiing" class="sr-only" loading="lazy">
+                    <img src="ski.jpeg" alt="Skiing" class="sr-only" loading="lazy">
                 </div>
-                <div class="activity-box" style="background-image: url('snowboarding.jpg');">
+                <div class="activity-box" style="background-image: url('snowboard.jpeg');">
                     <p>Snowboarding</p>
-                    <img src="snowboarding.jpg" alt="Snowboarding" class="sr-only" loading="lazy">
+                    <img src="snowboard.jpeg" alt="Snowboarding" class="sr-only" loading="lazy">
                 </div>
-                <div class="activity-box" style="background-image: url('cycling.jpg');">
+                <div class="activity-box" style="background-image: url('bycicle.jpeg');">
                     <p>Cycling</p>
-                    <img src="cycling.jpg" alt="Cycling" class="sr-only" loading="lazy">
+                    <img src="bycicle.jpeg" alt="Cycling" class="sr-only" loading="lazy">
                 </div>
-                <div class="activity-box" style="background-image: url('volleyball.jpg');">
+                <div class="activity-box" style="background-image: url('volleyball.jpeg');">
                     <p>Volleyball</p>
-                    <img src="volleyball.jpg" alt="Volleyball" class="sr-only" loading="lazy">
+                    <img src="volleyball.jpeg" alt="Volleyball" class="sr-only" loading="lazy">
                 </div>
             </div>
         </section>
