--- a/cooking.html
+++ b/cooking.html
@@ -5,75 +5,182 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cooking - Oliver Joergensen</title>
+    <meta name="description" content="Discover the favorite recipes of Oliver Joergensen, including a variety of delicious and healthy meals.">
+    <meta name="keywords" content="Oliver Joergensen, Cooking, Recipes, Burrito Salad, Bagel, Chicken Wrap, Bauerntopf, Caesar Salad, Chili con Carne, Pasta Bolognese, Pasta Carbonara, Fajitas, Salmon Pasta, Home Made Pizza">
+    <meta name="author" content="Oliver Joergensen">
+    <meta property="og:title" content="Cooking - Oliver Joergensen" />
+    <meta property="og:description" content="Discover the favorite recipes of Oliver Joergensen, including a variety of delicious and healthy meals." />
+    <meta property="og:image" content="cooking-header.jpg" />
+    <meta property="og:url" content="url-to-website.com/cooking.html" />
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css">
     <style>
+        :root {
+            --primary-color: #1e90ff;
+            --secondary-color: #4682b4;
+            --background-color: #e9f5ff;
+            --text-color: #333;
+            --light-text-color: #666;
+            --hover-color: #1c86ee;
+            --font-family: 'Raleway', sans-serif;
+        }
+
         body {
-            font-family: 'Raleway', sans-serif;
+            font-family: var(--font-family);
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
-            color: #333;
+            background-color: var(--background-color);
+            color: var(--text-color);
+            line-height: 1.8;
         }
 
         header {
-            background-color: #007BFF;
+            background: url('cooking-header.jpg') center/cover no-repeat, rgba(0, 0, 0, 0.5);
             color: #fff;
-            padding: 60px 20px;
+            padding: 100px 20px;
             text-align: center;
-            background-image: url('cooking.jpeg'); /* Replace with your actual image path */
-            background-size: cover;
-            background-position: center;
             position: relative;
         }
 
+        header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            background: rgba(0, 0, 0, 0.4);
+            z-index: 1;
+        }
+
+        header h1,
+        header p {
+            position: relative;
+            z-index: 2;
+        }
+
         header h1 {
-            font-size: 2.5em;
+            font-size: 3em;
             margin: 0;
-            color: #000;
+            color: #fff;
+            text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
+        }
+
+        header p {
+            font-size: 1.5em;
+            margin: 10px 0 0;
+            color: #fff;
+            text-shadow: 1px 1px 2px rgba(0, 0, 0, 0.5);
+        }
+
+        nav {
+            background-color: var(--secondary-color);
+            position: sticky;
+            top: 0;
+            z-index: 1000;
+            opacity: 0.9;
+        }
+
+        nav .navbar-brand {
+            font-size: 1.5em;
+            font-weight: 700;
+        }
+
+        nav a {
+            color: #fff;
+            padding: 15px 20px;
+            text-decoration: none;
+            display: inline-block;
+            transition: background-color 0.3s ease, color 0.3s ease;
+        }
+
+        nav a:hover,
+        nav a.active {
+            background-color: var(--hover-color);
+            color: #f9f9f9;
+        }
+
+        .navbar-nav {
+            margin: auto;
+            justify-content: center;
         }
 
         .container {
             padding: 40px 20px;
-            text-align: center;
-        }
-
-        .container h2 {
-            font-size: 2em;
-            margin-bottom: 20px;
-            color: #000;
-        }
-
-        .container p {
-            font-size: 1.2em;
-            line-height: 1.6;
-            color: #333;
-        }
-
-        .recipes {
-            text-align: left;
-            max-width: 800px;
+            max-width: 1200px;
             margin: 0 auto;
         }
 
-        .recipe {
-            background-color: #fff;
-            margin: 20px 0;
-            padding: 20px;
-            border-left: 5px solid #007BFF;
+        .recipes-container {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+            gap: 20px;
         }
 
-        .recipe h3 {
-            margin-top: 0;
-        }
-
-        footer {
-            background-color: #333;
-            color: #fff;
+        .recipe-box {
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            overflow: hidden;
             text-align: center;
-            padding: 20px;
-            position: fixed;
+            transition: transform 0.3s ease, box-shadow 0.3s ease, background-color 0.3s ease;
+            background-size: cover;
+            background-position: center;
+            background-color: #e0e0e0;
+            position: relative;
+            display: flex;
+            align-items: flex-end;
+            height: 200px;
+        }
+
+        .recipe-box p {
+            margin: 0;
+            padding: 20px 10px;
+            font-size: 1.2em;
+            color: #fff;
+            background-color: rgba(0, 0, 0, 0.5);
             width: 100%;
-            bottom: 0;
+            box-sizing: border-box;
+        }
+
+        .recipe-box:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
+        }
+
+        .recipe-box:hover p {
+            background-color: rgba(0, 0, 0, 0.7);
+        }
+
+        .card {
+            border: none;
+            border-radius: 8px;
+            background: #fff;
+            box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+            transition: transform 0.3s ease, box-shadow 0.3s ease;
+            padding: 20px;
+            margin: 20px 0;
+        }
+
+        .card:hover {
+            transform: scale(1.05);
+            box-shadow: 0 8px 16px rgba(0, 0, 0, 0.2);
+        }
+
+        .footer-icons {
+            display: flex;
+            justify-content: center;
+            gap: 10px;
+        }
+
+        .footer-icons a {
+            color: #fff;
+            text-decoration: none;
+            font-size: 1.5em;
+        }
+
+        .footer-icons a:hover {
+            color: var(--hover-color);
         }
     </style>
 </head>
@@ -81,61 +188,118 @@
 <body>
     <header>
         <h1>Cooking</h1>
+        <p>Discover my favorite recipes</p>
     </header>
-    <div class="container">
-        <h2>Welcome to my cooking side</h2>
-        <p>Here you will find some of my recipes that I like to cook.</p>
-        <div class="recipes">
-            <div class="recipe">
-                <h3>Burrito Salad</h3>
-                <p>Ingredients: Hackfleisch, Salat, Avocado, Paprika, Rote Zwiebel, Reis, Joghurt, Lime, Onion Powder, Paprika Powder</p>
-            </div>
-            <div class="recipe">
-                <h3>Bagel</h3>
-                <p>Ingredients: Avo, Bagel, Ei, Hüttenkäse</p>
-            </div>
-            <div class="recipe">
-                <h3>Chicken Wrap</h3>
-                <p>Ingredients: Chicken Geschnetzeltes, Wrap, Yaos Joghurt, Avocado, Zitrone, Reis, Hüttenkäse</p>
-            </div>
-            <div class="recipe">
-                <h3>Bauerntopf</h3>
-                <p>Ingredients: Hackfleisch, Tomatensauce, Tomatenpüree, Kartoffel, Paprika, Carrots, Garlic, Crème Fraîche, Gemüsebrühe</p>
-            </div>
-            <div class="recipe">
-                <h3>Caesar Salad</h3>
-                <p>Ingredients: Chicken Breast, Boiled Egg, Lettuce, Tomato, Red Onion, Yoghurt Sauce</p>
-            </div>
-            <div class="recipe">
-                <h3>Chili con Carne</h3>
-                <p>Ingredients: Hackfleisch, Potatoes, Kidney Beans, Mais, Zwiebel, Knoblauch, Gehackte Tomate Dosen</p>
-            </div>
-            <div class="recipe">
-                <h3>Pasta Bolognese</h3>
-                <p>Ingredients: Pasta, Hackfleisch, Tomatensauce, Garlic, Zwiebel, Carrots, Kräuter</p>
-            </div>
-            <div class="recipe">
-                <h3>Pasta Carbonara</h3>
-                <p>Ingredients: Parmesan, Ei, Pasta-Wasser, Pasta, Pfeffer, Salz</p>
-            </div>
-            <div class="recipe">
-                <h3>Fajitas</h3>
-                <p>Ingredients: Guacamole, Hackfleisch/Chicken, Paprika, Zwiebel, Salat, Reis, Mais, Tomaten, Gurke, Crème Fraîche, Coop Salsa</p>
-            </div>
-            <div class="recipe">
-                <h3>Salmon Pasta</h3>
-                <p>Ingredients: Geräucherte Lachs, Cherry Tomaten, Spinat, Garlic, Lemon Zest, Lemon Juice, Halbrahm, Pasta, Maizena</p>
-            </div>
-            <div class="recipe">
-                <h3>Home Made Pizza</h3>
-                <p>For dough: Wasser, Hefe, Mehl, Olivenöl, Salz, Prise Zucker<br>
-                For toppings: Tomatensauce, Mozzarella, etc.</p>
+    <nav aria-label="Main Navigation" class="navbar navbar-expand-lg navbar-dark">
+        <div class="container-fluid">
+            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarNav">
+                <ul class="navbar-nav">
+                    <li class="nav-item">
+                        <a class="nav-link active" aria-current="page" href="#home">Home</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#recipes">Recipes</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="#contact">Contact</a>
+                    </li>
+                </ul>
             </div>
         </div>
-    </div>
-    <footer>
+    </nav>
+    <main>
+        <section id="home" class="container welcome-container">
+            <h2 class="text-center my-4">Welcome to My Cooking Page</h2>
+            <p class="text-center">Hi, my name is Oliver Joergensen. Here you can explore my favorite recipes and culinary creations.</p>
+        </section>
+        <section id="recipes" class="container">
+            <h2 class="text-center my-4">Recipes</h2>
+            <div class="recipes-container">
+                <div class="recipe-box" style="background-image: url('burrito-salad.jpg');">
+                    <p>Burrito Salad</p>
+                    <img src="burrito-salad.jpg" alt="Burrito Salad" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('bagel.jpg');">
+                    <p>Bagel</p>
+                    <img src="bagel.jpg" alt="Bagel" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('chicken-wrap.jpg');">
+                    <p>Chicken Wrap</p>
+                    <img src="chicken-wrap.jpg" alt="Chicken Wrap" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('bauerntopf.jpg');">
+                    <p>Bauerntopf</p>
+                    <img src="bauerntopf.jpg" alt="Bauerntopf" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('caesar-salad.jpg');">
+                    <p>Caesar Salad</p>
+                    <img src="caesar-salad.jpg" alt="Caesar Salad" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('chili-con-carne.jpg');">
+                    <p>Chili con Carne</p>
+                    <img src="chili-con-carne.jpg" alt="Chili con Carne" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('pasta-bolognese.jpg');">
+                    <p>Pasta Bolognese</p>
+                    <img src="pasta-bolognese.jpg" alt="Pasta Bolognese" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('pasta-carbonara.jpg');">
+                    <p>Pasta Carbonara</p>
+                    <img src="pasta-carbonara.jpg" alt="Pasta Carbonara" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('fajitas.jpg');">
+                    <p>Fajitas</p>
+                    <img src="fajitas.jpg" alt="Fajitas" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('salmon-pasta.jpg');">
+                    <p>Salmon Pasta</p>
+                    <img src="salmon-pasta.jpg" alt="Salmon Pasta" class="sr-only" loading="lazy">
+                </div>
+                <div class="recipe-box" style="background-image: url('home-made-pizza.jpg');">
+                    <p>Home Made Pizza</p>
+                    <img src="home-made-pizza.jpg" alt="Home Made Pizza" class="sr-only" loading="lazy">
+                </div>
+            </div>
+        </section>
+        <section id="contact" class="container">
+            <h2 class="text-center my-4">Contact</h2>
+            <article class="card">
+                <p class="text-center">You can reach me at: <a href="mailto:oliver.joergensen@outlook.com">oliver.joergensen@outlook.com</a></p>
+            </article>
+        </section>
+    </main>
+    <footer class="text-center py-3 bg-dark text-light">
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
+        <div class="footer-icons">
+            <a href="https://linkedin.com" target="_blank"><i class="fab fa-linkedin"></i></a>
+            <a href="https://instagram.com" target="_blank"><i class="fab fa-instagram"></i></a>
+        </div>
     </footer>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/bootstrap/5.1.3/js/bootstrap.bundle.min.js"></script>
+    <script>
+        document.addEventListener('scroll', function () {
+            const sections = document.querySelectorAll('section');
+            const navLinks = document.querySelectorAll('nav a');
+            let index = sections.length;
+
+            while (--index && window.scrollY + 50 < sections[index].offsetTop) {}
+
+            navLinks.forEach((link) => link.classList.remove('active'));
+            navLinks[index].classList.add('active');
+        });
+
+        document.querySelectorAll('nav a').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                document.querySelector(this.getAttribute('href')).scrollIntoView({
+                    behavior: 'smooth'
+                });
+            });
+        });
+    </script>
 </body>
 
 </html>
