--- a/reading.html
+++ b/reading.html
@@ -39,6 +39,23 @@
             flex-direction: column;
         }
 
+        nav {
+            background: rgba(0, 0, 0, 0.7);
+            position: absolute;
+            top: 0;
+            width: 100%;
+            display: flex;
+            justify-content: center;
+            padding: 10px 0;
+        }
+
+        nav a {
+            color: #fff;
+            text-decoration: none;
+            margin: 0 15px;
+            font-weight: 700;
+        }
+
         header h1 {
             font-size: 3em;
             margin: 0;
@@ -123,6 +140,11 @@
 
 <body>
     <header>
+        <nav>
+            <a href="#home">Home</a>
+            <a href="#books">Books</a>
+            <a href="#contact">Contact</a>
+        </nav>
         <h1>Reading</h1>
     </header>
     <div class="container">
