--- a/reading.html
+++ b/reading.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Reading - Oliver Joergensen</title>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@300;400;700&display=swap" rel="stylesheet">
+    <meta name="description" content="Discover Oliver Joergensen's favorite books, including fantasy, high-fantasy, and adventure genres.">
     <style>
         :root {
             --primary-color: #007BFF;
@@ -147,44 +148,46 @@
         </nav>
         <h1>Reading</h1>
     </header>
-    <div class="container">
-        <h2>Welcome to my reading page</h2>
-        <p>Here you will find some of my favorite books that I loved to read.</p>
-        <div class="books">
-            <div class="book">
+    <main class="container">
+        <section>
+            <h2>Welcome to my reading page</h2>
+            <p>Here you will find some of my favorite books that I loved to read.</p>
+        </section>
+        <section id="books" class="books">
+            <article class="book">
                 <h3>Robert Jordan - Das Rad der Zeit</h3>
                 <p>A fantasy book series that is considered one of the greatest in the genre, known for its complex story and world-building.</p>
-            </div>
-            <div class="book">
+            </article>
+            <article class="book">
                 <h3>Terry Goodkind - Das Schwert der Wahrheit</h3>
                 <p>A captivating series that blends fantasy and philosophy, with a gripping narrative and deep characters.</p>
-            </div>
-            <div class="book">
+            </article>
+            <article class="book">
                 <h3>Christopher Paolini - Eragon</h3>
                 <p>A high-fantasy series that follows the journey of a young dragon rider and his quest to defeat an evil king.</p>
-            </div>
-            <div class="book">
+            </article>
+            <article class="book">
                 <h3>Richard Schwartz - Die Götter Kriege Saga</h3>
                 <p>An exciting series filled with adventure, magic, and intriguing characters.</p>
-            </div>
-            <div class="book">
+            </article>
+            <article class="book">
                 <h3>J.K. Rowling - Harry Potter Series</h3>
                 <p>A beloved fantasy series that chronicles the life and adventures of a young wizard, Harry Potter, and his fight against the dark wizard Voldemort.</p>
-            </div>
-            <div class="book">
+            </article>
+            <article class="book">
                 <h3>Christina Henry - The Chronicles of Alice Series</h3>
                 <p>A dark and twisted retelling of the classic Alice in Wonderland story, filled with adventure and suspense.</p>
-            </div>
-            <div class="book">
+            </article>
+            <article class="book">
                 <h3>J.R.R. Tolkien - The Hobbit</h3>
                 <p>A timeless fantasy tale about the journey of Bilbo Baggins, who embarks on an adventure to help a group of dwarves reclaim their homeland.</p>
-            </div>
-            <div class="book">
+            </article>
+            <article class="book">
                 <h3>John Flanagan - Die Chroniken von Araluen</h3>
                 <p>An engaging series that follows the adventures of an apprentice Ranger named Will, set in a richly detailed medieval world.</p>
-            </div>
-        </div>
-    </div>
+            </article>
+        </section>
+    </main>
     <footer>
         <p>© 2024 Oliver Joergensen. All rights reserved.</p>
     </footer>
