--- a/reading.html
+++ b/reading.html
@@ -48,6 +48,7 @@
             display: flex;
             justify-content: center;
             padding: 10px 0;
+            transition: background 0.3s ease-in-out;
         }
 
         nav a {
@@ -55,6 +56,11 @@
             text-decoration: none;
             margin: 0 15px;
             font-weight: 700;
+            transition: color 0.3s ease-in-out;
+        }
+
+        nav a:hover {
+            color: #ffd700;
         }
 
         header h1 {
@@ -112,9 +118,7 @@
             color: #fff;
             text-align: center;
             padding: 20px;
-            position: fixed;
             width: 100%;
-            bottom: 0;
         }
 
         @media (max-width: 768px) {
@@ -136,6 +140,11 @@
                 font-size: 2em;
             }
         }
+
+        /* Smooth scrolling */
+        html {
+            scroll-behavior: smooth;
+        }
     </style>
 </head>
 
@@ -149,7 +158,7 @@
         <h1>Reading</h1>
     </header>
     <main class="container">
-        <section>
+        <section id="home">
             <h2>Welcome to my reading page</h2>
             <p>Here you will find some of my favorite books that I loved to read.</p>
         </section>
