--- a/reading.html
+++ b/reading.html
@@ -9,10 +9,11 @@
     <meta name="description" content="Discover Oliver Joergensen's favorite books, including fantasy, high-fantasy, and adventure genres.">
     <style>
         :root {
-            --primary-color: #007BFF;
+            --primary-color: #4CAF50;
             --secondary-color: #f4f4f4;
             --text-color: #333;
             --background-color: #fff;
+            --nav-height: 60px;
         }
 
         body {
@@ -22,6 +23,7 @@
             background-color: var(--secondary-color);
             color: var(--text-color);
             line-height: 1.6;
+            overflow-x: hidden;
         }
 
         header {
@@ -38,17 +40,30 @@
             align-items: center;
             justify-content: center;
             flex-direction: column;
+            z-index: 1;
+        }
+
+        header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            background-color: rgba(0, 0, 0, 0.5);
+            z-index: -1;
         }
 
         nav {
             background: rgba(0, 0, 0, 0.7);
-            position: absolute;
+            position: fixed;
             top: 0;
             width: 100%;
             display: flex;
             justify-content: center;
             padding: 10px 0;
             transition: background 0.3s ease-in-out;
+            z-index: 2;
         }
 
         nav a {
@@ -71,7 +86,7 @@
         }
 
         .container {
-            padding: 40px 20px;
+            padding: 100px 20px 40px;
             max-width: 1000px;
             margin: 0 auto;
         }
@@ -100,11 +115,13 @@
             padding: 20px;
             border-left: 5px solid var(--primary-color);
             box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
-            transition: transform 0.2s ease-in-out;
+            transition: transform 0.2s ease-in-out, box-shadow 0.2s ease-in-out;
+            border-radius: 8px;
         }
 
         .book:hover {
             transform: translateY(-5px);
+            box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
         }
 
         .book h3 {
@@ -123,7 +140,7 @@
 
         @media (max-width: 768px) {
             .container {
-                padding: 20px 10px;
+                padding: 80px 10px 20px;
             }
 
             header h1 {
@@ -157,12 +174,12 @@
 </head>
 
 <body>
+    <nav>
+        <a href="#home">Home</a>
+        <a href="#books">Books</a>
+        <a href="#contact">Contact</a>
+    </nav>
     <header>
-        <nav>
-            <a href="#home">Home</a>
-            <a href="#books">Books</a>
-            <a href="#contact">Contact</a>
-        </nav>
         <h1>Reading</h1>
     </header>
     <main class="container">
