--- a/reading.html
+++ b/reading.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Discover Oliver Joergensen's favorite books, including fantasy, high-fantasy, and adventure genres.">
     <style>
         :root {
-            --primary-color: #4CAF50;
+            --primary-color: #007BFF;
             --secondary-color: #f4f4f4;
             --text-color: #333;
             --background-color: #fff;
@@ -127,7 +127,7 @@
         .book h3 {
             margin-top: 0;
             font-size: 1.5em;
-            color: var(--primary-color);
+            color: var (--primary-color);
         }
 
         footer {
@@ -136,6 +136,11 @@
             text-align: center;
             padding: 20px;
             width: 100%;
+        }
+
+        .contact {
+            font-size: 1.2em;
+            color: var(--text-color);
         }
 
         @media (max-width: 768px) {
@@ -175,7 +180,7 @@
 
 <body>
     <nav>
-        <a href="#home">Home</a>
+        <a href="https://oliverjoerg.github.io/personal-webpage/">Home</a>
         <a href="#books">Books</a>
         <a href="#contact">Contact</a>
     </nav>
@@ -220,6 +225,11 @@
                 <h3>John Flanagan - Die Chroniken von Araluen</h3>
                 <p>An engaging series that follows the adventures of an apprentice Ranger named Will, set in a richly detailed medieval world.</p>
             </article>
+        </section>
+        <section id="contact" class="contact">
+            <h2>Contact</h2>
+            <p>If you have any questions or comments, feel free to reach out to me at:</p>
+            <p><a href="mailto:oliver.joergensen@outlook.com">oliver.joergensen@outlook.com</a></p>
         </section>
     </main>
     <footer>
