--- a/reading.html
+++ b/reading.html
@@ -140,6 +140,29 @@
         .contact {
             font-size: 1.2em;
             color: var(--text-color);
+            padding: 50px 20px;
+            text-align: center;
+        }
+
+        .contact h2 {
+            font-size: 2em;
+            color: var(--primary-color);
+            margin-bottom: 20px;
+        }
+
+        .contact p {
+            margin: 10px 0;
+        }
+
+        .contact a {
+            color: var(--primary-color);
+            text-decoration: none;
+            font-weight: 700;
+            transition: color 0.3s ease-in-out;
+        }
+
+        .contact a:hover {
+            color: #0056b3;
         }
 
         @media (max-width: 768px) {
