--- a/travel.html
+++ b/travel.html
@@ -16,20 +16,29 @@
         }
 
         header {
-            background-color: #007BFF;
+            background: url('travel.tiff') no-repeat center center/cover;
             color: #fff;
-            padding: 200px 20px;
             text-align: center;
-            background-image: url('travel.tiff'); /* Replace with your actual image path */
-            background-size: cover;
-            background-position: center;
+            padding: 150px 20px;
             position: relative;
         }
 
+        header::before {
+            content: '';
+            position: absolute;
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            background: rgba(0, 0, 0, 0.5);
+            z-index: 1;
+        }
+
         header h1 {
-            font-size: 2.5em;
+            font-size: 3em;
             margin: 0;
-            color: #000;
+            position: relative;
+            z-index: 2;
         }
 
         .container {
@@ -38,15 +47,13 @@
         }
 
         .container h2 {
-            font-size: 2em;
+            font-size: 2.5em;
             margin-bottom: 20px;
-            color: #000;
         }
 
         .container p {
             font-size: 1.2em;
             line-height: 1.6;
-            color: #333;
         }
 
         .countries {
@@ -60,6 +67,11 @@
             margin: 20px 0;
             padding: 20px;
             border-left: 5px solid #007BFF;
+            transition: background-color 0.3s;
+        }
+
+        .country:hover {
+            background-color: #e9f5ff;
         }
 
         .country h3 {
@@ -71,9 +83,28 @@
             color: #fff;
             text-align: center;
             padding: 20px;
-            position: fixed;
-            width: 100%;
-            bottom: 0;
+        }
+
+        @media (max-width: 600px) {
+            header {
+                padding: 100px 20px;
+            }
+
+            header h1 {
+                font-size: 2em;
+            }
+
+            .container h2 {
+                font-size: 2em;
+            }
+
+            .container p {
+                font-size: 1em;
+            }
+
+            .country {
+                padding: 15px;
+            }
         }
     </style>
 </head>
